  * Scanning system with Thread.
  * Fix the chinese messy code in file system info.

  [hebing]
  * Change the gsettigns value to fit UKUI. (LP: #1755653,
    LP: #1755656)
  * Adjust the borders of main window. (LP: #1755659)
  * Fix the bug that the mainwindow always at the top.
  * Fix the bug that the policy window pop twice.
  * Fix the crash when clean .xession-error.

 -- handsome_feng <jianfengli@ubuntukylin.com>  Thu, 12 Apr 2018 15:45:00 +0800

youker-assistant (2.2.7-0ubuntu5) bionic; urgency=medium

  * Remove dependency on python-imaging.

 -- Matthias Klose <doko@ubuntu.com>  Mon, 30 Oct 2017 11:19:17 +0100

youker-assistant (2.2.7-0ubuntu4) artful; urgency=medium

  * Fix build with OpenCV 3.1.

 -- Mattia Rizzolo <mapreri@ubuntu.com>  Fri, 23 Jun 2017 15:26:24 +0200

youker-assistant (2.2.7-0ubuntu3) artful; urgency=medium

  * No-change rebuild against OpenCV 3.1.

 -- Mattia Rizzolo <mapreri@ubuntu.com>  Thu, 22 Jun 2017 13:31:49 +0200

youker-assistant (2.2.7-0ubuntu2) zesty; urgency=medium

  * debian/control: limit dmidecode Depends to x86 and ARM. (LP: #1679788)

 -- Mathieu Trudel-Lapierre <cyphermox@ubuntu.com>  Tue, 11 Apr 2017 11:02:32 -0400

youker-assistant (2.2.7-0ubuntu1) zesty; urgency=low

  * Call cheese.
  * Free some list struct.
  * Modify os release information.
  * Resolved lintian warning.

 -- lixiang <lixiang@kylinos.cn>  Thu, 23 Mar 2017 10:17:31 +0800

youker-assistant (2.2.6-0ubuntu1) zesty; urgency=low

  * Set launcher position.
  * Multi screen display normal.
  * Display virtual network card info.
  * Display right network info.

 -- lixiang <lixiang@kylinos.cn>  Mon, 20 Mar 2017 11:32:41 +0800

youker-assistant (2.2.4-0ubuntu1) zesty; urgency=low

  * Fixed the ℃  display.
  * Fixed some bug about information.

 -- lixiang <lixiang@kylinos.cn>  Fri, 17 Mar 2017 15:09:41 +0800

youker-assistant (2.1.9-0ubuntu1) xenial; urgency=low

  * change get_sensor because the kernel update
